# android-apk-crawler

./: .gitignore  README.md  analyzer.py  analyzer.sh  requirements.txt  setup.cfg
android_apk_crawler/: analyzer.py  report.py
results/: part1-old.csv  part1.csv  part2.csv
results_1st_attempt/: part1.csv  part2.csv  part3.csv
