[metadata]
name = android-apk-crawler
author = Luis Cruz
author-email = luismirandacruz@gmail.com
summary = Tool to collect information from APKs
license = MIT
description-file =
    README.md
home-page = https://luiscruz.github.io/
requires-python = >=2.6
classifier = 
    Development Status :: 1 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
 
[files]
packages =
    android_apk_crawler

[entry_points]
console_scripts =
    android-apk-crawler = android_apk_crawler.analyzer:tool

[flake8]
filename = *.py
ignore = E101,E241